--- a/pin.html
+++ b/pin.html
@@ -30,6 +30,8 @@
               type="password"
               id="pin1"
               class="pin-input"
+              inputmode="numeric"
+              pattern="[0-9]"
               maxlength="1"
               name= "pin1"
             />
@@ -37,13 +39,17 @@
               type="password"
               id="pin2"
               class="pin-input"
+              inputmode="numeric"
+              pattern="[0-9]"
               maxlength="1"
-name= "pin2"
+.name= "pin2"
             />
             <input
               type="password"
               id="pin3"
               class="pin-input"
+              inputmode="numeric"
+              pattern="[0-9]"
               maxlength="1"
 name= "pin3"
             />
@@ -51,6 +57,8 @@ name= "pin3"
               type="password"
               id="pin4"
               class="pin-input"
+              inputmode="numeric"
+              pattern="[0-9]"
               maxlength="1"
 name= "pin4"
             />
