--- a/pin.html
+++ b/pin.html
@@ -31,7 +31,7 @@
               id="pin1"
               class="pin-input"
               inputmode="numeric"
-              pattern="[0-9]"
+              pattern="[0-9]*"
               maxlength="1"
               name= "pin1"
             />
@@ -40,7 +40,7 @@
               id="pin2"
               class="pin-input"
               inputmode="numeric"
-              pattern="[0-9]"
+              pattern="[0-9]*"
               maxlength="1"
 .name= "pin2"
             />
@@ -49,7 +49,7 @@
               id="pin3"
               class="pin-input"
               inputmode="numeric"
-              pattern="[0-9]"
+              pattern="[0-9]*"
               maxlength="1"
 name= "pin3"
             />
@@ -58,7 +58,7 @@ name= "pin3"
               id="pin4"
               class="pin-input"
               inputmode="numeric"
-              pattern="[0-9]"
+              pattern="[0-9]*"
               maxlength="1"
 name= "pin4"
             />
